--- a/wiki/montecydia/index.html
+++ b/wiki/montecydia/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Konfederacja Montecydyjska - Fangea i inne kontynenty</title>
+    <title>Montecydia - Fangea i inne kontynenty</title>
     <meta property="og:title" content="Montecydja">
     <meta name="twitter:title" content="Montecydja">
     <meta name="description" content="Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.">
@@ -36,10 +36,10 @@
         </nav>
         <article>
             <header>
-                <div>Konfederacja Montecydyjska</div>
-                <span>04.05.2024</span>
+                <div>Montecydia</div>
+                <span>11.06.2024</span>
             </header>
-            <h1>Konfederacja Montecydyjska</h1>
+            <h1>Montecydia</h1>
             <table class="infobox">
                 <caption>
                     Konfederacja Montecydyjska
