--- a/wiki/index.html
+++ b/wiki/index.html
@@ -39,9 +39,9 @@
             <div class="categories-column"></div>
             <ul class="article-category">
                 <h1>Państwa</h1>
-                <li><a href="https://grumqy.github.io/fangea/wiki/pampersia/">Rzeczpospolita Pampersia</a></li>
-                <li><a href="https://grumqy.github.io/fangea/wiki/nadmorze/">Wielka Republika Nadmorska</a></li>
-                <li><a href="https://grumqy.github.io/fangea/wiki/montecydja/">Konfederacja Montecydyjska</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/pampersia/">Pampersia</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/nadmorze/">Nadmorze</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Postacie</h1>
