--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -83,7 +83,7 @@
                     </tr>
                     <tr>
                         <th>Język urzędowy</th>
-                        <td>nadmorski (włoski), pamperski  (polski), sudgangeiski (angielski), makronezyjski (japoński)</td>
+                        <td>nadmorski (włoski), pamperski  (polski), sudfangejski (angielski), makronezyjski (japoński)</td>
                     </tr>
                     <tr>
                         <th>Stolica</th>
