--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -177,7 +177,7 @@
             </p>
             <h1>Miasta</h1>
             <p>
-                <i>Osobny artykuł: Miasta w Nadmorzu</i>
+                ⠀⠀⠀<img class="icon large" src="https://i.ibb.co/vh0tWkb/informacja.png"><i>Osobny artykuł: Miasta w Nadmorzu</i>
             </p>
             <h1>Ustrój polityczny</h1>
             <p>
