--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -177,7 +177,7 @@
             </p>
             <h1>Miasta</h1>
             <p>
-                ⠀⠀⠀<img class="icon large" src="https://i.ibb.co/vh0tWkb/informacja.png"><i>Osobny artykuł: Miasta w Nadmorzu</i>
+                ⠀⠀⠀<img class="icon small" src="https://i.ibb.co/vh0tWkb/informacja.png"><i><a href="https://grumqy.github.io/fangea/wiki/miasta_w_nadmorzu/">Osobny artykuł: Miasta w Nadmorzu</a></i>
             </p>
             <h1>Ustrój polityczny</h1>
             <p>
