--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -307,6 +307,7 @@
                 <li>samorząd województwa</li>
             </ul>
             <h1>Geografia</h1>
+            <div class="uncomplete"></div>
             <p>
                 ...
             </p>
@@ -320,6 +321,7 @@
 
             </p>
             <h1>Zatrudnienie</h1>
+            <div class="uncomplete"></div>
             <p>
                 ...
             </p>
