--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -176,6 +176,7 @@
                 Źródosłów wyrazu „Nadmorze” nie został udokumentowany w świadectwach historycznych. Najprawdopodobniej jest to nazwa zjednoczonych plemion zamieszkujących tamtejsze regiony zapożyczona od wyrazów „nad” i „morzem”. Nazwy Nadmorze zaczęto używać w odniesieniu do całego państwa w XIX wieku i funkcjonowała pierwotnie jako forma określenia „ziemia nadmorska”. Zarówno nazwy Nadmorza i Nadmorzan jak i większość nazw nadawanych im w innych językach wywodzą się z tego źródła.
             </p>
             <h1>Miasta</h1>
+            <div class="uncomplete"></div>
             <p>
                 <img class="icon large" src="https://i.ibb.co/vh0tWkb/informacja.png"><i>Osobny artykuł: <a href="https://grumqy.github.io/fangea/wiki/miasta_w_nadmorzu/">Miasta w Nadmorzu</a></i>
             </p>
