--- a/wiki/montecydia/index.html
+++ b/wiki/montecydia/index.html
@@ -426,6 +426,7 @@
                 <li>Trybunał Federalny nie może badać zgodności ustaw z konstytucją. Ustawy bowiem może uchylać tylko parlament. Za to może badać i ewentualnie uchylać prawodawstwo kantonalne.</li>
             </ul>
             <h1>Gospodarka</h1>
+            <div class="uncomplete"></div>
             <p>...</p>
             <h1>Zatrudnienie</h1>
             <p>...</p>
