--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -178,7 +178,7 @@
             <h1>Miasta</h1>
             <div class="uncomplete"></div>
             <p>
-                <img class="icon large" src="https://i.ibb.co/vh0tWkb/informacja.png"><i>Osobny artykuł: <a href="https://grumqy.github.io/fangea/wiki/miasta_w_nadmorzu/">Miasta w Nadmorzu</a></i>
+                <img class="icon medium" src="https://i.ibb.co/vh0tWkb/informacja.png"><i>Osobny artykuł: <a href="https://grumqy.github.io/fangea/wiki/miasta_w_nadmorzu/">Miasta w Nadmorzu</a></i>
             </p>
             <h1>Ustrój polityczny</h1>
             <p>
