--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -199,7 +199,7 @@
             </p>
             <h2>Władza wykonawcza</h2>
             <p>
-                <i>Osobne artykuły: Prezydent Wielkiej Republiki Nadmorskiej i Rada Ministrów w Nadmorzu.</i>
+                <img class="icon medium" src="https://i.ibb.co/vh0tWkb/informacja.png"><i>Osobne artykuły: <a href="https://grumqy.github.io/fangea/wiki/prezydent_wielkiej_republiki_nadmorskiej/">Prezydent Wielkiej Republiki Nadmorskiej</a> i <a href="https://grumqy.github.io/fangea/wiki/rada_ministrów_w_nadmorzu/">Rada Ministrów w Nadmorzu</a></i>
             </p>
             <p>
                 Organami władzy wykonawczej jest Prezydent. Prezydent wybierany jest w powszechnych wyborach prezydenckich na 10-letnią kadencję. Według konstytucji Prezydent jest najwyższym przedstawicielem państwa w stosunkach wewnętrznych i międzynarodowych, pełni funkcję zwierzchnika Sił Zbrojnych Wielkiej Republiki Nadmorskiej.
