--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -229,7 +229,7 @@
             </ul>
             <h1>Podział administracyjny</h1>
             <p>
-                <i>Osobny artykuł: Podział administracyjny Nadmorza.</i>
+                <img class="icon medium" src="https://i.ibb.co/vh0tWkb/informacja.png"><i>Osobny artykuł: <a href="https://grumqy.github.io/fangea/wiki/podział_administracyjny_nadmorza/">Podział administracyjny Nadmorza</a></i>
             </p>
             <p>
                 Nadmorze jest państwem unitarnym. Od 9 marca 2024 obowiązuje czterostopniowy podział administracyjny państwa na 8 okręgów, 29 prowincji oraz, 327 powiatów i 2063 gmin.
