--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="article-tile-text"><span>Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.</span></div>
                     <img src="https://i.ibb.co/172NNM4/rnflaga.png">
                 </div>
-                <div class="article-tile-description">Wielka Republika Nadmorska</div>
+                <div class="article-tile-description">Nadmorze</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/disco_babushka/">
@@ -66,14 +66,14 @@
                 <div class="article-tile-description">Joanna „Disco Babushka” Świtek</div>
             </div>
             </a>
-        <a href="https://grumqy.github.io/fangea/wiki/pampersia/">
+        <a href="https://grumqy.github.io/fangea/wiki/port_złotice/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Pampersia, Rzeczpospolita Pampersia (RP) - Państwo unitarne w Fangei Środkowej. Położone między Morzem Pamperskim na północy a rzeką XYZ na południu, w przeważającej części w dorzeczu Ostry. Od wschodu graniczy z WRN a od południa z USF. Większość północnej granicy Pampersii wyznacza wybrzeże Morza Pamperskiego. Pamperska Wyłączna Strefa Ekonomiczna na Morzu Pamperskim graniczy ze strefami WRN oraz USF.</span></div>
-                    <img src="https://i.ibb.co/bJFhJjH/pampersia.png">
+                    <div class="article-tile-text"><span>Port Złotice (niem. Hafengoldberg; katuc. Gielberentt; łac. Portaurum; heb. זהב נמל; ros. Гавань Злотице) – gminne miasto wojewódzkie leżące w województwie Złotickim, w powiecie Złotickim. Leży jednocześnie nad rzeką Wodnicą i kanałem Katuckim. Jest znane z najmniejszego portu w kraju i swej zabudowy, popularnie zwanej kamienicami typu Złotickiego, można je też spotkać w Kterowie, Porcie Wielcec czy Rinie.</span></div>
+                    <img src="https://i.ibb.co/VNZHWQ0/image.png">
                 </div>
-                <div class="article-tile-description">Rzeczpospolita Pampersia</div>
+                <div class="article-tile-description">Port Złotice</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/cartland/">
@@ -86,14 +86,14 @@
                 <div class="article-tile-description">Cartland</div>
             </div>
         </a>
-            <a href="https://grumqy.github.io/fangea/wiki/montecydja/">
+            <a href="https://grumqy.github.io/fangea/wiki/montecydia/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
                     <div class="article-tile-text"><span>Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.</span></div>
                     <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png">
                 </div>
-                <div class="article-tile-description">Konfederacja Montecydyjska</div>
+                <div class="article-tile-description">Montecydia</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/richteryzm/">
@@ -115,7 +115,7 @@
                     <div class="article-tile-text"><span>Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.</span></div>
                     <img src="https://i.ibb.co/172NNM4/rnflaga.png">
                 </div>
-                <div class="article-tile-description">Wielka Republika Nadmorska</div>
+                <div class="article-tile-description">Nadmorze</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/disco_babushka/">
@@ -135,37 +135,37 @@
                     <div class="article-tile-text"><span>Pampersia, Rzeczpospolita Pampersia (RP) - Państwo unitarne w Fangei Środkowej. Położone między Morzem Pamperskim na północy a rzeką XYZ na południu, w przeważającej części w dorzeczu Ostry. Od wschodu graniczy z WRN a od południa z USF. Większość północnej granicy Pampersii wyznacza wybrzeże Morza Pamperskiego. Pamperska Wyłączna Strefa Ekonomiczna na Morzu Pamperskim graniczy ze strefami WRN oraz USF.</span></div>
                     <img src="https://i.ibb.co/bJFhJjH/pampersia.png">
                 </div>
-                <div class="article-tile-description">Rzeczpospolita Pampersia</div>
+                <div class="article-tile-description">Pampersia</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/cartland/">
+        <a href="https://grumqy.github.io/fangea/wiki/andannajwa_lidi/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <img src="https://i.ibb.co/syMJDYS/obraz-2024-04-21-011526519.png">
-                    <div class="article-tile-text"><span>Cartland to firma zajmująca się sprzedażą detaliczną żywności z siedzibą w Wernie. Prowadzi 450 placówek i jest reprezentowana w siedmiu innych krajach oprócz Montecydji. Ten pełnozakresowy detalista spożywczy jest spółką niezależną. W okresie późnych lat dwutysięcznych Robert Korgen założył przedsiębiorstwo o nazwie „Carteunland Werno”, które w 2023 roku zostało przekształcone w „Cartland”. Spółka ta przekształciła się w dynamiczną hurtownię spożywczą obsługującą region Dzisiejszej Zarwii.</span></div>
+                    <img src="https://i.ibb.co/hyvLCMj/sadfs.webp">
+                    <div class="article-tile-text"><span>Andannajwa Lidi (pol. Wolne Ludy) – nieistniejąca organizacja separatystyczna działająca w 2023 roku na terenie Nowej Łodyczej, założona przez rdzenną ludność miasta w celu utworzenia państwa niezależnego od Pieczarii. Organizacja jest uznawana za terrorystyczną ze względu na przeprowadzone mordy na mieszkańcach Nowej Łodyczej w czasie powstania w mieście.</span></div>
                 </div>
-                <div class="article-tile-description">Cartland</div>
+                <div class="article-tile-description">Andannajwa Lidi</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/montecydja/">
+        <a href="https://grumqy.github.io/fangea/wiki/montecydia/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
                     <div class="article-tile-text"><span>Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.</span></div>
                     <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png">
                 </div>
-                <div class="article-tile-description">Konfederacja Montecydyjska</div>
+                <div class="article-tile-description">Montecydia</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/richteryzm/">
+        <a href="https://grumqy.github.io/fangea/wiki/ajjbdalizm_religia/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
                     <div class="article-tile-text"><span>Zbiór poglądów politycznych będący połączeniem skrajnego liberalizmu w gospodarce i tradycjonalizmu w kwestiach społeczno-obyczajowych i politycznych, a także ustrojowych. Jest on powszechnie uważany za konserwatywną odmianę anarchokapitalizmu. Richteryści opowiadają się za wprowadzeniem monarchii oraz zniesieniem demokracji.</span></div>
-                    <img src="https://i.ibb.co/QFdcFZb/obraz-2024-06-01-211200049.png">
+                    <img src="https://i.ibb.co/ZgxTdVV/obraz-2024-04-24-183305454.png">
                 </div>
-                <div class="article-tile-description">Richteryzm</div>
+                <div class="article-tile-description">Ajjbdalizm (religia)</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/nadmorze/">
@@ -175,7 +175,7 @@
                     <div class="article-tile-text"><span>Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.</span></div>
                     <img src="https://i.ibb.co/172NNM4/rnflaga.png">
                 </div>
-                <div class="article-tile-description">Wielka Republika Nadmorska</div>
+                <div class="article-tile-description">Nadmorze</div>
             </div>
         </a>
     </div>
@@ -187,7 +187,7 @@
                     <div class="article-tile-text"><span>Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.</span></div>
                     <img src="https://i.ibb.co/172NNM4/rnflaga.png">
                 </div>
-                <div class="article-tile-description">Wielka Republika Nadmorska</div>
+                <div class="article-tile-description">Nadmorze</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/disco_babushka/">
@@ -200,14 +200,14 @@
                 <div class="article-tile-description">Joanna „Disco Babushka” Świtek</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/pampersia/">
+        <a href="https://grumqy.github.io/fangea/wiki/łukasz_lukasox/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Pampersia, Rzeczpospolita Pampersia (RP) - Państwo unitarne w Fangei Środkowej. Położone między Morzem Pamperskim na północy a rzeką XYZ na południu, w przeważającej części w dorzeczu Ostry. Od wschodu graniczy z WRN a od południa z USF. Większość północnej granicy Pampersii wyznacza wybrzeże Morza Pamperskiego. Pamperska Wyłączna Strefa Ekonomiczna na Morzu Pamperskim graniczy ze strefami WRN oraz USF.</span></div>
-                    <img src="https://i.ibb.co/bJFhJjH/pampersia.png">
+                    <div class="article-tile-text"><span>Łukasz Maksymilian Lukasox (ur. 26 czerwca 1956 w Pampersiu) - pamperski przedsiębiorca, osobowość telewizyjna oraz polityk, prezydent Pampersii w latach 2021-2023 2023-2025. W 1978 otrzymał dyplom z ekonomii na Pamperskim uniwersytecie ekonomii. W 1982 przejął rodzinną firmę Julet Lukasox & Son trudzącą się w przemyśle filmowym, zmieniając później jej nazwę na PF Films Organization. Podczas swojej kariery biznesowej z czasem otworzył się na rynek nieruchomości. </span></div>
+                    <img src="https://i.ibb.co/1z8jRGR/cipicpi.png">
                 </div>
-                <div class="article-tile-description">Rzeczpospolita Pampersia</div>
+                <div class="article-tile-description">Łukasz Lukasox</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/cartland/">
@@ -220,14 +220,14 @@
                 <div class="article-tile-description">Cartland</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/montecydja/">
+        <a href="https://grumqy.github.io/fangea/wiki/montecydia/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
                     <div class="article-tile-text"><span>Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.</span></div>
                     <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png">
                 </div>
-                <div class="article-tile-description">Konfederacja Montecydyjska</div>
+                <div class="article-tile-description">Montecydia</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/richteryzm/">
