--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -40,6 +40,7 @@
                 <span>11.06.2024</span>
             </header>
             <h1>Pampersia</h1>
+            <div class="uncomplete"></div>
             <table class="infobox">
                 <caption>
                     Rzeczpospolita Pampersia
