--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -40,7 +40,6 @@
                 <span>11.06.2024</span>
             </header>
             <h1>Pampersia</h1>
-            <div class="uncomplete"></div>
             <table class="infobox">
                 <caption>
                     Rzeczpospolita Pampersia
@@ -180,7 +179,7 @@
                 Pampersia, Rzeczpospolita Pampersia (RP) - Państwo unitarne w Fangei Środkowej. Położone między Morzem Pamperskim na północy a rzeką Bertą na południu, w przeważającej części w dorzeczu Ostry. Od wschodu graniczy z WRN a od południa z USF. Większość północnej granicy Pampersii wyznacza wybrzeże Morza Pamperskiego. Pamperska Wyłączna Strefa Ekonomiczna na Morzu Pamperskim graniczy ze strefami WRN oraz USF.
             </p>
             <p>
-                Powierzchnia administracyjna Pampersii wynosi 18 325 km², co daje jej XYZ miejsce na świecie. Zamieszkana przez 5 000 000 osób, zajmuje pod względem ludności 4 miejsce na świecie. Pampersia jest podzielona na 15 województw. Jej miastem z największą populacją i jednocześnie stolicą jest Pamperś. Inne metropolie to San Creasesia, Pamperberg, Luka-Saresko i Albertopol. Największą pamperską aglomeracyją policentryczną jest konurbacja nadostrzańska. Pampersia jest krajem jednolitym etnicznie - 82% ludności deklaruje narodowość pamperską.
+                Powierzchnia administracyjna Pampersii wynosi 18 325 km², co daje jej 4. miejsce na świecie. Zamieszkana przez 5 000 000 osób, zajmuje pod względem ludności 4 miejsce na świecie. Pampersia jest podzielona na 15 województw. Jej miastem z największą populacją i jednocześnie stolicą jest Pamperś. Inne metropolie to San Creasesia, Pamperberg, Luka-Saresko i Albertopol. Największą pamperską aglomeracyją policentryczną jest konurbacja nadostrzańska. Pampersia jest krajem jednolitym etnicznie - 82% ludności deklaruje narodowość pamperską.
             </p>
             <p>    
                 Pierwszą historyczną datą która opisuje dzieje Pampersii jest XII wiek, kroniki donoszą iż wtedy pierwszy nieznany samozwańczy władca zjednoczył trzy plemiona. Pamerów, Lurian i Łożan, przyjmując chrzest. Późniejsze dzieje na setki lat nie są znane, ponieważ nie zachowały się żadne kroniki z tego okresu. W XIX wieku ludność pamperska zajmowała tereny dzisiejszego województwa Ostrzańskiego lub Madriatyckiego, wówczas w Pampersii dominowały demokratyczne nastroje. Przełom nastąpił w 2020 roku gdzie to dnia 23 stycznia Pampersia zjednoczyła się w jedno demokratyczne państwo.
@@ -191,6 +190,7 @@
             <p>  
                 Latem 2022 roku Pampersia wdarła się w kontynentalny konflikt. Wojna zakończyła się wielką klęską, mimo poprzedzającego pasma zwycięstw. Pampersia utraciła region Sareski, San Creasesie i region Łożański. Pampersia zmieniła wtedy swoje podejście, zaczęła pokojową politykę dzięki czemu z czasem odzyskała swoje tereny.
             </p>
+            <div class="uncomplete"></div>
             <p>
                 Pampersia jest demokratycznym państwem z rozwiniętą, wysokodochodową gospodarką i wysokim wskaźnikiem jakości życia. Większość Pampersów (XYZ%) pracuje w sektorze XYZ. Ponadto rocznie Pampersię odwiedza około 4mln turystów, dzięki czemu jest jednym z najczęsciej odwiedzanych krajów świata. Pampersia jest jednym z najbezpieczniejszych państw na świecie, statystyki wskazują Pampersię jako lidera w tej dziedzinie. 
             </p>
