--- a/wiki/izydor_nwm_ktoś/index.html
+++ b/wiki/izydor_nwm_ktoś/index.html
@@ -111,7 +111,7 @@
                 W 2022 roku, na wieść o powstaniu DRP z ominięciem wyspy Koźnińsko-Azkońskiej (została przyłączona później) Izydor przeprowadził się do Pieczarkowa, gdzie założył partię <a href="https://grumqy.github.io/fangea/wiki/wolność_i_sprawiedliwość/">Wolność i Sprawiedliwość (WiR)</a>, gdzie zaczął szybko promować swoją postać. Działanie to doprowadziło do objęcia posady prezydenta 23 sierpnia 2022 roku po abdykacji pierwszego prezydenta. 
             </p>
             <h2>Pierwsza prezydentura</h2>
-            <figure class="left" style="width: 200px">
+            <figure class="right" style="width: 200px">
                 <img src="https://i.ibb.co/p24RyVD/asdfdsf.webp" />
                 <figcaption>
                     Pierwszy komunikat o budowie Portu Złotice
@@ -121,17 +121,17 @@
                 Pierwsza prezydentura Izydora trwała od 23 sierpnia 2022 roku do 4 października tego samego roku. W tym czasie ulokował 11 nowych miast, jednak jego prezydentura najbardziej kojarzona jest z początkiem <a href="https://grumqy.github.io/fangea/wiki/kamienicyzm/"> kamienicyzmu.</a> Było to spowodowane odbudową Pieczarkowa po <a href="https://grumqy.github.io/fangea/wiki/wojna_unforgivsko_pieczarska/">wojnie Unforgivsko-Pieczarskiej,</a> po której to w całym kraju podstawowym typem zabudowy stały się kamienice. Miasta założone za rządów Izydora składały się z niemal w pełni tego typu budowli. Inną ważną inwestycją w tym czasie była decyzja o rozpoczęciu budowy <a href="https://grumqy.github.io/fangea/wiki/Port_Złotice/">Portu Złotice</a> wraz z autostradą ze stolicy do tego miasta. W ramach współpracy z Wizgardem ujednolicono też torowiska z tym państwem, co umożliwiło zbliżenie współpracy z Republiką Naziemieńską.
             </p>
             <h2>Przerwa od polityki</h2>
-            <figure class="right" style="width: 200px">
+            <figure class="left" style="width: 200px">
                 <img src="https://i.ibb.co/GF0STms/sdagdsg.webp" />
                 <figcaption>
                     Kamienica przy ulicy Tygrysiej 3 na skrzyżowaniu ulicy Tygrysiej i Jasnej
                 </figcaption>
             </figure>
             <p>
-                Po przegraniu wyborów i zwyciężeniu <a href="https://grumqy.github.io/fangea/wiki/mieczysław_kolejny_ktosiek/">Mieczysława Kolejnego Ktośka,</a> Nwm Ktoś postanowił odpocząć od polityki i zająć się prowadzeniem szkoły prywatnej w href="https://grumqy.github.io/fangea/wiki/wałana/">Wałanii, </a>przy ulicy Tygrysiej 3. Prowadził ją jednak do 3 grudnia 2022 roku, ponieważ później postanowił wrócić do polityki. 
+                Po przegraniu wyborów i zwyciężeniu <a href="https://grumqy.github.io/fangea/wiki/mieczysław_kolejny_ktosiek/">Mieczysława Kolejnego Ktośka,</a> Nwm Ktoś postanowił odpocząć od polityki i zająć się prowadzeniem szkoły prywatnej w <a href="https://grumqy.github.io/fangea/wiki/wałana/">Wałanii, </a>przy ulicy Tygrysiej 3. Prowadził ją jednak do 3 grudnia 2022 roku, ponieważ później postanowił wrócić do polityki. 
             </p>
             <h2>Powrót na urząd prezydenta</h2>
-            <figure class="left" style="width: 200px">
+            <figure class="right" style="width: 200px">
                 <img src="https://i.ibb.co/jwwLxT7/dgdfg.webp" />
                 <figcaption>
                     Izydor Nwm Ktoś w trakcie przemowy z balkonu kamienicy w Rymbieńciniu
@@ -141,7 +141,7 @@
                 Po odejściu od prowadzenia szkoły, Izydor zaczął ponownie promować swoją już znaną postać wśród mieszkańców Pieczarii, dzięki czemu 24 czerwca 2023 roku został ponownie prezydentem kraju. Po zostaniu prezydentem wprowadził program <a href="https://grumqy.github.io/fangea/wiki/izydorówka/">szpitala "Izydorówki"</a> w miasteczkach i wsiach kraju, poza tym wprowadził też program finansowania silosów zbożowych dla rolników. Oba programy są kontynuowane po dziś dzień.
             </p>
             <h2>Wojna i zejście do opozycji antywiatlinowskiej</h2>
-            <figure class="right" style="width: 200px">
+            <figure class="left" style="width: 200px">
                 <img src="https://i.ibb.co/Y3FZhx7/gdgfh.webp" />
                 <figcaption>
                     Izydor Nwm Ktoś na defiladzie w Pieczarkowie w ostatnich dniach władzy, ostatnia fotografia, gdzie widziano go żywego
