--- a/wiki/izydor_nwm_ktoś/index.html
+++ b/wiki/izydor_nwm_ktoś/index.html
@@ -111,7 +111,7 @@
                 W 2022 roku, na wieść o powstaniu DRP z ominięciem wyspy Koźnińsko-Azkońskiej (została przyłączona później) Izydor przeprowadził się do Pieczarkowa, gdzie założył partię <a href="https://grumqy.github.io/fangea/wiki/wolność_i_sprawiedliwość/">Wolność i Sprawiedliwość (WiR)</a>, gdzie zaczął szybko promować swoją postać. Działanie to doprowadziło do objęcia posady prezydenta 23 sierpnia 2022 roku po abdykacji pierwszego prezydenta. 
             </p>
             <h2>Pierwsza prezydentura</h2>
-            <figure class="right" style="width: 200px">
+            <figure class="left" style="width: 200px">
                 <img src="https://i.ibb.co/p24RyVD/asdfdsf.webp" />
                 <figcaption>
                     Pierwszy komunikat o budowie Portu Złotice
