--- a/wiki/izydor_nwm_ktoś/index.html
+++ b/wiki/izydor_nwm_ktoś/index.html
@@ -144,7 +144,7 @@
             <figure class="left" style="width: 200px">
                 <img src="https://i.ibb.co/Y3FZhx7/gdgfh.webp" />
                 <figcaption>
-                    Izydor Nwm Ktoś na defiladzie w Pieczarkowie w ostatnich dniach władzy, ostatnia fotografia, gdzie widziano go żywego
+                    Izydor Nwm Ktoś na defiladzie w Pieczarkowie w ostatnich dniach władzy – ostatnia fotografia, gdzie widziano go żywego
                 </figcaption>
             </figure>
             <p>
