--- a/wiki/łukasz_lukasox/index.html
+++ b/wiki/łukasz_lukasox/index.html
@@ -286,7 +286,7 @@
             <figure class="right" style="width: 200px">
                 <img src="https://i.ibb.co/StLpfcY/uuu.png" />
                 <figcaption>
-                    Zdjęcie placu w San Creasesii w trakcie bitwy o San Creasesie, 16 sierpnia 2022
+                    Zdjęcie placu w San Creasesii w trakcie bitwy o San Creasesię, 16 sierpnia 2022
                 </figcaption>
             </figure>
             <p>
