--- a/wiki/index.html
+++ b/wiki/index.html
@@ -70,6 +70,10 @@
                 <h1>Ugrupowania</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/andannajwa_lidi/">Andannajwa Lidi</a></li>
             </ul>
+            <ul class="article-category">
+                <h1>Konflikty Zbrojne</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/wojna_domowa_w_wizgardzie/">Wojna domowa w Wizgardzie</a></li>
+            </ul>
         </div>
     </main>
     <script src="/fangea/pageheader.js"></script>
